2002-01-01  Sam Steingold  <sds@gnu.org>

	* init.lisp (sys::remove-old-definitions): CERROR for exported CL
	symbols even when there is no definition

2001-12-25  Sam Steingold  <sds@gnu.org>

	make DESCRIBE break long lines
	* describe.lisp (describe-stream): new slot BUFFER (word-buffered)
	(describe-stream-flush-buffer): new function to flush the BUFFER
	(stream-write-char, stream-finish-output, stream-force-output):
	use it
	(stream-line-column, stream-start-line-p, stream-clear-output):
	account for BUFFER
	(describe-object): when printing the external symbols of a
	package, do not fill: DESCRIBE-STREAM does it for us
	(describe1): FINISH-OUTPUT when done to flush the buffer
	(describe-signature): terminate with a period

2001-12-25  Sam Steingold  <sds@gnu.org>

	* makemake.in (MAKE): set from the environment variable, if any

2001-12-25  Sam Steingold  <sds@gnu.org>

	The 2001-08-25 patch (autoconf-2.52 upgrade) broke FreeBSD build.
	This patch appears to fix it.
	* unixconf.h.in (ICONV_CONST): use #define, not undef

2001-12-24  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-FLET, c-FUNCTION-MACRO-LET, traverse-anode):
	use NEW-CONST

2001-12-21  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-DIRECT-FUNCTION-CALL): added a flet
	COMMUTE-WITH-REST-P (a minor simplification)

2001-12-20  Sam Steingold  <sds@gnu.org>

	optimize away COMPLEMENT in :TEST (COMPLEMENT ...)
	* compiler.lisp (c-TEST/TEST-NOT): new function
	(c-form-table): map the functions with :TEST/:TEST-NOT keys
	listed in <http://www.lisp.org/HyperSpec/Body/sec_1-8-2.html>
	to c-TEST/TEST-NOT

2001-12-20  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-seqop): do not need to check whether the user
	rebound NOT (this optimization does not depend on it)

2001-12-20  Sam Steingold  <sds@gnu.org>

	* makemake.in (unixconf.h): a separate target
	(makemake): recreate only makemake, not the whole configuration

2001-12-20  Sam Steingold  <sds@gnu.org>
